infrastructure/security/authorization-policies/allow-edge-ingress-from-core.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-edge-ingress-from-core
  namespace: neurologix-edge
  labels:
    app.kubernetes.io/part-of: neurologix
    security.neurologix.io/zone: edge
    security.neurologix.io/policy-type: allowlist
  annotations:
    security.neurologix.io/iec62443-sr: "SR 5.2"
    security.neurologix.io/adr: "ADR-011"
spec:
  action: ALLOW
  rules:
    - from:
        - source:
            namespaces:
              - neurologix-core
            principals:
              - cluster.local/ns/neurologix-core/sa/*
